app-a_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
  namespace: appns-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
      - name: app-a
        image: nginx:latest
