app-b_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  namespace: appns-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
      - name: app-b
        image: nginx:latest
