default-backend_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-api
  template:
    metadata:
      labels:
        app: hello-api
    spec:
      containers:
      - name: hello-api
        image: hello-api:1.0
