app-a_sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a
  namespace: appns-a
spec:
  selector:
    app: app-a
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
