app-b_sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-b
  namespace: appns-b
spec:
  selector:
    app: app-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
