default-backend_sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-backend
  namespace: default
spec:
  selector:
    app: hello-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
