app-a_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appns-a-ingress
  namespace: appns-a
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: a.lab9.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-a
            port:
              number: 80
