app-b_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appns-b-ingress
  namespace: appns-b
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: b.lab9.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-b
            port:
              number: 80
